chore: split dir to define project architechture