@@ -1,11 +1,8 @@
 -server
--Xmx4G
--XX:InitialRAMPercentage=25
--XX:MaxRAMPercentage=25
+-Xmx2G
+-XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
+-XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
--XX:+UseGCOverheadLimit
--XX:+ExitOnOutOfMemoryError
--Djdk.attach.allowAttachSelf=true
--Dfile.encoding=UTF-8
+-XX:OnOutOfMemoryError=kill -9 %p
